--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hj-proj-module"
-version = "0.1.11"
+version = "0.1.12"
 description = "Packages for HJ Projects"
 authors = ["Hojung Yun <hojung.yun@gmail.com>"]
 readme = "README.md"
@@ -21,6 +21,7 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.11"
 google-cloud-pubsub = "^2.21.1"
+orjson = "^3.10.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
